# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  setup.cfg
.github/workflows/: check.yml
page_analyzer/: app.py  config.py  database.py  logging_config.py  tools.py
page_analyzer/templates/: 404.html  500.html  base.html  index.html  url.html  urls.html
tests/: test_app.py
